# garage_mind

./: .gitignore  Cargo.toml
src/: forFuture.txt  main.rs
src/adapters/: mod.rs
src/adapters/axum/: main.rs
src/connector/: routes.rs  server.rs
src/routes/: mod.rs  profile.rs  root.rs
