[package]
name = "garage_mind"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Tokio and mini-redis
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
# Actix
actix-web = "4"
#Axum
axum = "0.6.12"
dotenv = "0.15.0"
# Serde
serde = "1.0"
# Serde Json
serde_json = "1.0.91"


[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "garage_mind"